--- a/vignettes/vignettes_lib.bib
+++ b/vignettes/vignettes_lib.bib
@@ -27,6 +27,18 @@ author = {Husmann, Kai and Lange, Alexander and Spiegel, Elmar},
 title = {{The R Package optimization: Flexible Global Optimization with Simulated-Annealing}},
 year = {2017}
 }
+@book{Boog2018,
+author = {Boog, J and Jang, E and He, W and Kalbacher, Th},
+booktitle = {OpenGeoSys (OGS)},
+file = {:home/phit0/Public/MA/Literature/Computational Hydrology III OGS#IPhreeqc.pdf:pdf},
+isbn = {9783319671529},
+pages = {110},
+title = {{Eunseon Jang OpenGeoSys Tutorial Computational Hydrology III : OGS # IPhreeqc Coupled Reactive Transport Modeling}},
+url = {http://extras.springer.com},
+year = {2018}
+}
+
+
 @manual{Ishwaran2021,
 annote = {R package version 2.10.1},
 author = {Ishwaran, H and Kogalur, U B},
